A lot of refactoring: useInfiniteScroll hook implemented instead of using a library, fixed type errors created new hooks to make the code more readable, starting first deployment

--- a/src/global.css
+++ b/src/global.css
@@ -69,6 +69,11 @@ body {
   background-clip: padding-box;
 }
 
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+}
+
 .overlay-background {
   background-color: rgba(0, 0, 0, 0.1);
   width: 100%;
